--- a/assets/apps/caputok/privacy_policy/index.html
+++ b/assets/apps/caputok/privacy_policy/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Terms of Use - Caputok</title>
+    <title>Privacy Policy - Caputok</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -11,70 +11,75 @@
             margin: 20px;
             padding: 0;
             background-color: #f9f9f9;
-            color: #333;
         }
         h1, h2 {
-            color: #444;
+            color: #333;
         }
         h1 {
             text-align: center;
         }
         section {
-            margin-bottom: 20px;
-            padding: 10px;
             background: #fff;
-            border: 1px solid #ddd;
-            border-radius: 5px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-        }
-        .contact {
-            margin-top: 20px;
-            font-style: italic;
+            padding: 15px;
+            border-radius: 8px;
+            margin-bottom: 20px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
     </style>
 </head>
 <body>
-  <h1>Privacy Policy for Caputok</h1>
-  <p>Effective Date: Date of app release</p>
-      <section>
-<p>Caputok (“the App”) is committed to protecting your privacy. This Privacy Policy explains how your data is handled when you use our app.</p>
-    </section>
+
+    <h1>Privacy Policy for Caputok</h1>
+    <p><strong>Effective Date:</strong> [Date of App Release]</p>
+
     <section>
-  <h2>1. Data Collection</h2>
-  <p><strong>User-Uploaded Files:</strong> Caputok processes text files (e.g., followers and following lists) that you upload directly into the App. All processing occurs entirely on your device, and no data is transmitted to any external server or third-party service.</p>
-<p><strong>Offline Usage:</strong> The App does not require or use an internet connection, and no information is shared externally.</p>
+        <h2>1. Data Collection</h2>
+        <ul>
+            <li><strong>User-Uploaded Files:</strong> Caputok processes text files (e.g., followers and following lists) that you upload directly into the App. All processing occurs entirely on your device, and no data is transmitted to any external server or third-party service.</li>
+        </ul>
     </section>
+
     <section>
-<h2>2. Permissions</h2>
-<p>Caputok requires certain device permissions to function:</p>
-<p><strong>Storage Access:</strong> To allow the App to access and analyze the text files you choose to upload. This permission is limited to the scope of functionality and is not used for any other purpose.</p>
-    </section>  
-  <section>
-<h2>3. Data Usage</h2>
-<p><strong>Local Processing:</strong> The App processes the text files you upload exclusively on your device. No data from these files is sent to or stored on any external server or service.</p>
-<p><strong>Result Generation:</strong> Based on the data in your uploaded files, Caputok generates results which are displayed within the App. These results do not leave your device and are not shared with any third party.</p>
-<p><strong>Generated Links:</strong> The links produced (e.g., https://tiktok.com/@username) are constructed using data from your input files. They serve as a visual representation of the analysis but do not connect to any service unless you manually navigate to them outside the App.</p> 
-<p><strong>No External Storage:</strong> All generated information remains on your device. Caputok does not keep any record or copy of the files you upload or the results produced after you close the App unless you choose to save or export them manually.</p>
-<p><strong>User Control:</strong> You have full control over any data within the App. You can delete the files and results at any time through standard device operations or within the App's interface if such functionality is provided.</p>
+        <h2>2. Permissions</h2>
+        <ul>
+            <li><strong>Storage Access:</strong> To allow the App to access and analyze the text files you upload. This permission is limited to the functionality of the App and is not used for any other purpose.</li>
+            <li><strong>Internet Access:</strong> To enable the display of ads. This is the only use of the internet by the App.</li>
+        </ul>
     </section>
+
     <section>
-<h2>4. Third-Party Services</h2>
-  <p>As of the current version, Caputok does not integrate with or use any third-party services.</p>
+        <h2>3. Data Usage and Internet Connectivity</h2>
+        <ul>
+            <li><strong>Local Data Processing:</strong> All uploaded text files are processed exclusively on your device. No data from these files is sent to or stored on any external server or service.</li>
+            <li><strong>Generated Results:</strong> Based on the data in your uploaded files, Caputok generates results, which are displayed within the App. These results are not shared with any third party.</li>
+            <li><strong>Generated Links:</strong> Any links produced (e.g., https://tiktok.com/@username) are based on your input files. They serve as visual representations of the analysis and do not connect to any service unless you manually navigate to them outside the App.</li>
+            <li><strong>Internet Access for Ads:</strong> Caputok uses internet connectivity solely to load advertisements. No personal data or user behavior data is collected, stored, or shared by Caputok for advertising purposes.</li>
+        </ul>
     </section>
+
     <section>
-<h2>5. User Rights (EU GDPR Compliance)</h2>
-<h3>If you are located in the European Union, you have the following rights regarding your data:</h3>
-<p><strong>Right to Access:</strong> Since no data is stored or shared externally, there is no data stored by Caputok for you to access.</p>
-<p><strong>Right to Deletion:</strong> Uploaded files and generated results can be deleted directly from your device.</p>
+        <h2>4. Third-Party Services</h2>
+        <p>Caputok integrates third-party services only for advertising purposes. These services may require limited internet access but do not collect or store your personal data.</p>
     </section>
+
     <section>
-<h2>6. Changes to the Privacy Policy</h2>
-<p>We may update this Privacy Policy on Every APP Updates. Changes will be effective immediately upon posting the updated policy. Please review this document periodically.</p>
+        <h2>5. User Rights (EU GDPR Compliance)</h2>
+        <ul>
+            <li><strong>Right to Access:</strong> Since no data is stored or shared externally, there is no data stored by Caputok for you to access.</li>
+            <li><strong>Right to Deletion:</strong> Uploaded files and generated results can be deleted directly from your device.</li>
+        </ul>
     </section>
+
     <section>
-<h2>Contact Information:</h2>
-<p>For questions about this Privacy Policy, contact us at:</p>
-<p>mail@krishnaniraula.com.np</p>
+        <h2>6. Changes to the Privacy Policy</h2>
+        <p>We may update this Privacy Policy whenever the App is updated. Changes will be effective immediately upon posting the updated policy. Please review this document periodically.</p>
     </section>
+
+    <section>
+        <h2>Contact Information</h2>
+        <p>If you have questions about this Privacy Policy, please contact us at:</p>
+        <p><strong>Email:</strong> mail@krishnaniraula.com.np</p>
+    </section>
+
 </body>
 </html>
