--- a/assets/apps/caputok/privacy_policy/index.html
+++ b/assets/apps/caputok/privacy_policy/index.html
@@ -58,9 +58,9 @@
     </section>
 
     <section>
-        <h2>4. Third-Party Services</h2>
-        <p>Caputok integrates third-party services only for advertising purposes. These services may require limited internet access but do not collect or store your personal data.</p>
-    </section>
+       <h2>4. Third-Party Services</h2>
+        <p>Caputok integrates third-party services primarily for advertising purposes. These services may require limited internet access and might collect non-personally identifiable information, such as device details or usage statistics, to deliver targeted ads. However, Caputok does not share or store your personal data with these services.</p>
+ </section>
 
     <section>
         <h2>5. User Rights (EU GDPR Compliance)</h2>
