--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
  <footer>
         <div class="footer-links">
             <a href="#">Useful Links</a>
-            <a href="#">Social Media Links</a>
+            <a href="https://www.linkedin.com/in/krishna-niraula-7429b2125/">LinkedIn</a>
             <a href="#">Privacy Policy</a>
             <a href="#">Terms of Use</a>
         </div>
