--- a/index.html
+++ b/index.html
@@ -186,6 +186,7 @@
         <div class="footer-links">
             <a href="#">Useful Links</a>
             <a href="https://www.linkedin.com/in/krishna-niraula-7429b2125/">LinkedIn</a>
+	    <a href="https://x.com/0kisn">X</a>
             <a href="#">Privacy Policy</a>
             <a href="#">Terms of Use</a>
         </div>
