--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta name="google-adsense-account" content="ca-pub-7909865065068819">
     <title>Krishna's Space</title>
     <link rel="shortcut icon" type="image/icon" href="assets/logo/favicon.png"/>
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
 	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7909865065068819"
      crossorigin="anonymous"></script>
@@ -185,8 +186,14 @@
  <footer>
         <div class="footer-links">
             <a href="#">Useful Links</a>
-            <a href="https://www.linkedin.com/in/krishna-niraula-7429b2125/">LinkedIn</a>
-	    <a href="https://x.com/0kisn">X</a>
+            <a href="https://www.linkedin.com/in/krishna-niraula-7429b2125/" target="_blank" rel="noopener noreferrer">
+    <i class="fab fa-linkedin"></i> LinkedIn
+</a>
+
+	    <a href="https://x.com/0kisn" target="_blank" rel="noopener noreferrer">
+    <i class="fab fa-x-twitter"></i> Follow me on X
+</a>
+
             <a href="#">Privacy Policy</a>
             <a href="#">Terms of Use</a>
         </div>
