--- a/index.html
+++ b/index.html
@@ -187,11 +187,11 @@
         <div class="footer-links">
             <a href="#">Useful Links</a>
             <a href="https://www.linkedin.com/in/krishna-niraula-7429b2125/" target="_blank" rel="noopener noreferrer">
-    <i class="fab fa-linkedin"></i> LinkedIn
+    <i class="fab fa-linkedin"></i>
 </a>
 
 	    <a href="https://x.com/0kisn" target="_blank" rel="noopener noreferrer">
-    <i class="fab fa-x-twitter"></i> Follow me on X
+    <i class="fab fa-x-twitter"></i>
 </a>
 
             <a href="#">Privacy Policy</a>
