--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 	<meta name="google-adsense-account" content="ca-pub-7909865065068819">
     <title>Krishna's Space</title>
     <link rel="shortcut icon" type="image/icon" href="assets/logo/favicon.png"/>
-	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+
     <link rel="stylesheet" href="styles.css">
 	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7909865065068819"
      crossorigin="anonymous"></script>
