--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
         <div class="footer-links">
             <a href="#">Useful Links</a>
             <a href="https://x.com/0kisn" target="_blank" rel="noopener noreferrer">
-            <i class="fab fa-twitter"></i>
+            <i class="fa-brands fa-x"></i>
         </a>
         <a href="https://www.linkedin.com/in/krishna-niraula-7429b2125/" target="_blank" rel="noopener noreferrer" class="linkedin">
             <i class="fab fa-linkedin"></i>
