--- a/index.html
+++ b/index.html
@@ -185,20 +185,53 @@
 	  </main>
 	
  <footer>
-        <div class="footer-links">
-            <a href="#">Useful Links</a>
-            <a href="https://x.com/0kisn" target="_blank" rel="noopener noreferrer">
-            <i class="fa-brands fa-x"></i>
-        </a>
-        <a href="https://www.linkedin.com/in/krishna-niraula-7429b2125/" target="_blank" rel="noopener noreferrer" class="linkedin">
-            <i class="fab fa-linkedin"></i>
+    <div class="footer-container">
+        <!-- Useful Links Column -->
+        <div class="footer-column">
+            <h3>Useful Links</h3>
+            <ul>
+                <li><a href="https://facebook.com" target="_blank" rel="noopener noreferrer">Facebook</a></li>
+                <li><a href="https://x.com" target="_blank" rel="noopener noreferrer">X (Twitter)</a></li>
+            </ul>
+        </div>
+
+        <!-- Social Media Column -->
+        <div class="footer-column">
+            <h3>Social Media</h3>
+            <ul>
+                <a href="https://facebook.com" target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook-f"></i>
+</a>
+                <a href="https://x.com/0kisn" target="_blank" rel="noopener noreferrer">
+            <i class="fab fa-twitter"></i>
         </a>
 
-            <a href="#">Privacy Policy</a>
-            <a href="#">Terms of Use</a>
+        <!-- LinkedIn Icon -->
+        <a href="https://www.linkedin.com/in/krishna-niraula-7429b2125/" target="_blank" rel="noopener noreferrer" class="linkedin">
+            <i class="fab fa-linkedin-in"></i>
+        </a>
+        
+
+    </ul>
         </div>
-        <p>© 2025 Krishna. All rights reserved.</p>
-    </footer>
+
+        <!-- About Column -->
+        <div class="footer-column">
+            <h3>About</h3>
+            <ul>
+                <li><a href="#privacy-policy">Privacy Policy</a></li>
+                <li><a href="#terms-of-use">Terms of Use</a></li>
+            </ul>
+        </div>
+    </div>
+
+    <!-- Copyright Section -->
+    <div class="footer-copyright">
+        <p>&copy; 2025 Krishna Niraula. All rights reserved.</p>
+    </div>
+</footer>
+
+
+
     <script src="scripts.js"></script>
     <script>
         async function openNewsPage() {
