--- a/index.html
+++ b/index.html
@@ -199,16 +199,16 @@
         <div class="footer-column">
             <h3>Social Media</h3>
             <ul>
-                <a href="https://facebook.com" target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook-f"></i>
-</a>
-                <a href="https://x.com/0kisn" target="_blank" rel="noopener noreferrer">
+               <li><a href="https://facebook.com" target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook-f"></i>
+</a></li>
+               <li> <a href="https://x.com/0kisn" target="_blank" rel="noopener noreferrer">
             <i class="fab fa-twitter"></i>
-        </a>
+        </a></li>
 
         <!-- LinkedIn Icon -->
-        <a href="https://www.linkedin.com/in/krishna-niraula-7429b2125/" target="_blank" rel="noopener noreferrer" class="linkedin">
+       <li> <a href="https://www.linkedin.com/in/krishna-niraula-7429b2125/" target="_blank" rel="noopener noreferrer" class="linkedin">
             <i class="fab fa-linkedin-in"></i>
-        </a>
+        </a></li>
         
 
     </ul>
