--- a/index.html
+++ b/index.html
@@ -199,15 +199,15 @@
         <div class="footer-column">
             <h3>Social Media</h3>
             <ul>
-               <li><a href="https://facebook.com" target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook-f"></i>
+               <li><a href="https://facebook.com" target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook-f"></i>Your Facebook 
 </a></li>
                <li> <a href="https://x.com/0kisn" target="_blank" rel="noopener noreferrer">
-            <i class="fab fa-twitter"></i>
+            <i class="fab fa-twitter"></i>Krishna's X
         </a></li>
 
         <!-- LinkedIn Icon -->
        <li> <a href="https://www.linkedin.com/in/krishna-niraula-7429b2125/" target="_blank" rel="noopener noreferrer" class="linkedin">
-            <i class="fab fa-linkedin-in"></i>
+            <i class="fab fa-linkedin-in"></i>Krishna on LinkedIn 
         </a></li>
         
 
