--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                <li><a href="https://facebook.com" target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook-f"></i>Your Facebook 
 </a></li>
                <li> <a href="https://x.com/0kisn" target="_blank" rel="noopener noreferrer">
-            <i class="fab fa-twitter"></i>Krishna's X
+            <i class="fa-brands fa-x"></i>Krishna's X
         </a></li>
 
         <!-- LinkedIn Icon -->
