--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
         <div class="footer-column">
             <h3>Social Media</h3>
             <ul>
-               <li><a href="https://facebook.com" target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook-f"></i>Your Facebook 
+               <li><a href="https://youtube.com/@sankhatro?si=fwaJiabYnMIfFk3q" target="_blank" rel="noopener noreferrer"><i class="fab fa-youtube"></i>YouTube
 </a></li>
                <li> <a href="https://x.com/0kisn" target="_blank" rel="noopener noreferrer">
             <i class="fa-brands fa-x"></i>Krishna's X
