--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                         </li>
                     </ul>
                 </li>
-                <li>Contact</li>
-                <li>About</li>
+               <li><a href="#contact">Contact</a></li>
+                <li><a href="#contact">About</a></li>
             </ul>
         </div>
     </nav>
@@ -218,6 +218,10 @@
         <div class="footer-column">
             <h3>About</h3>
             <ul>
+
+
+    <p>Email: <a id="contact-email" href="mailto:mail@krishnaniraula.com.np">Email Krishna</a></p>
+
                 <li><a href="#privacy-policy">Privacy Policy</a></li>
                 <li><a href="#terms-of-use">Terms of Use</a></li>
             </ul>
