--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta name="google-adsense-account" content="ca-pub-7909865065068819">
     <title>Krishna's Space</title>
     <link rel="shortcut icon" type="image/icon" href="assets/logo/favicon.png"/>
+<link rel="manifest" href="/manifest.json">
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 
     <link rel="stylesheet" href="styles.css">
