--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="google-adsense-account" content="ca-pub-7909865065068819">
-    <title>Krishna's Space</title>
+    
     <link rel="shortcut icon" type="image/icon" href="assets/logo/favicon.png"/>
-<link rel="manifest" href="/manifest.json">
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 
     <link rel="stylesheet" href="styles.css">
@@ -16,7 +15,7 @@
 </head>
 <body>
     <nav>
-        <div class="nav-left">Krishna</div>
+        <div class="nav-left">Krishna's Space</div>
         <div class="nav-right">
             <div class="menu-icon" onclick="toggleMenu()">☰</div>
             <ul id="menu">
