--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <nav>
-        <div class="nav-left">Krishna's Space</div>
+        <div class="nav-left">Krishna's Space 😉</div>
         <div class="nav-right">
             <div class="menu-icon" onclick="toggleMenu()">☰</div>
             <ul id="menu">
