--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 
 		  </main>
 <!-- Start of the ad box -->
-        <div class="ad-box">
+ <!--       <div class="ad-box">
             <script data-cfasync="false" type="text/javascript">
                 // Your obfuscated script here
             </script>
