--- a/index.html
+++ b/index.html
@@ -178,9 +178,9 @@
 </section>
 
 
-		  </main>
+		
 <!-- Start of the ad box -->
- <!--       <div class="ad-box">
+       <div class="ad-box">
             <script data-cfasync="false" type="text/javascript">
                 // Your obfuscated script here
             </script>
