--- a/index.html
+++ b/index.html
@@ -181,13 +181,7 @@
 		
 <!-- Start of the ad box -->
        <div class="ad-box">
-            <script data-cfasync="false" type="text/javascript">
-                // Your obfuscated script here
-            </script>
-            <script>
-                (function(d,z,s,c){s.src='//'+d+'/400/'+z;s.onerror=s.onload=E;function E(){c&&c();c=null}try{(document.body||document.documentElement).appendChild(s)}catch(e){E()}})('foomaque.net',8867269,document.createElement('script'),_kpopvw)
-            </script>
-            <script src="https://kulroakonsu.net/88/tag.min.js" data-zone="128288" async data-cfasync="false"></script>
+            <script src="https://poawooptugroo.com/4/8867395" async data-cfasync="false"></script>
         </div>
         <!-- End of the ad box -->
     </main>
