--- a/index.html
+++ b/index.html
@@ -179,13 +179,15 @@
 
 
 		
-<!-- Start of the ad box -->
-       <div class="ad-box">
-            <script src="https://poawooptugroo.com/4/8867395" async data-cfasync="false"></script>
+ <!-- Start of the ad box -->
+         <div class="ad-container">
+            <section class="ad-section">
+                <script src="https://poawooptugroo.com/4/8867395" async data-cfasync="false"></script>
+            </section>
         </div>
         <!-- End of the ad box -->
     </main>
- <footer>
+     <footer>
     <div class="footer-container">
         <!-- Useful Links Column -->
         <div class="footer-column">
