--- a/index.html
+++ b/index.html
@@ -186,6 +186,8 @@
             </section>
         </div>
         <!-- End of the ad box -->
+
+		  <script>(function(d,z,s){s.src='https://'+d+'/401/'+z;try{(document.body||document.documentElement).appendChild(s)}catch(e){}})('groleegni.net',8867459,document.createElement('script'))</script>
     </main>
      <footer>
     <div class="footer-container">
