--- a/index.html
+++ b/index.html
@@ -179,13 +179,12 @@
 
 
 		
- <!-- Start of the ad box -->
-         <div class="ad-container">
+  <!-- Start of the ad box -->
+        <div class="ad-container">
             <section class="ad-section">
-                <script src="https://poawooptugroo.com/4/8867395" async data-cfasync="false"></script>
+                <iframe src="https://poawooptugroo.com/4/8867395" frameborder="0" scrolling="no" width="100%" height="300" title="Dynamic Advertisement"></iframe>
             </section>
         </div>
-        <!-- End of the ad box -->
 
 		  <script>(function(d,z,s){s.src='https://'+d+'/401/'+z;try{(document.body||document.documentElement).appendChild(s)}catch(e){}})('groleegni.net',8867459,document.createElement('script'))</script>
     </main>
