--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                       
                     </ul>
                 </li>
-               <li><a href="#contact">Contact</a></li>
-                <li><a href="#contact">About</a></li>
+               <li><a href="#contact" class="no-underline">Contact</a></li>
+                <li><a href="#contact" class="no-underline">About</a></li>
             </ul>
         </div>
     </nav>
