--- a/newsondemand/index.html
+++ b/newsondemand/index.html
@@ -2,12 +2,70 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=100%, initial-scale=1.0">
-    <title></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Multi-Search Engine</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+        }
+        #search-engine-select {
+            margin-bottom: 10px;
+        }
+        .gcse-search {
+            margin-top: 20px;
+        }
+    </style>
 </head>
 <body>
+    <h1>Multi-Search Engine</h1>
+
+    <!-- Dropdown to Select Search Engine ID -->
+    <label for="search-engine-select">Select Search Engine:</label>
+    <select id="search-engine-select">
+        <option value="searchID1">Search Engine 1</option>
+        <option value="searchID2">Search Engine 2</option>
+        <option value="searchID3">Search Engine 3</option>
+        <option value="searchID4">Search Engine 4</option>
+        <option value="searchID5">Search Engine 5</option>
+    </select>
+
+    <!-- Search Box -->
+    <div class="gcse-search"></div>
+
     <script>
-    window.location.href = "https://cse.google.com/cse?cx=51feb554fb38a47a0#gsc.tab=0";
+        // Function to load the Google PSE script dynamically
+        function loadSearchEngine(cx) {
+            // Remove existing script if any
+            const oldScript = document.querySelector('script[src*="cse.google.com"]');
+            if (oldScript) {
+                oldScript.remove();
+            }
+
+            // Remove existing search results if any
+            const oldResults = document.querySelector('.gcse-search');
+            if (oldResults) {
+                oldResults.innerHTML = '';
+            }
+
+            // Load the new Google PSE script
+            const script = document.createElement('script');
+            script.src = `https://cse.google.com/cse.js?cx=${cx}`;
+            script.async = true;
+            document.head.appendChild(script);
+        }
+
+        // Event listener for dropdown change
+        document.getElementById('search-engine-select').addEventListener('change', (event) => {
+            const selectedCx = event.target.value;
+            loadSearchEngine(selectedCx);
+        });
+
+        // Load the default search engine on page load
+        window.onload = () => {
+            const defaultCx = document.getElementById('search-engine-select').value;
+            loadSearchEngine(defaultCx);
+        };
     </script>
 </body>
 </html>
