--- a/newsondemand/index.html
+++ b/newsondemand/index.html
@@ -11,6 +11,21 @@
         }
         #search-engine-select {
             margin-bottom: 10px;
+            padding: 5px;
+            font-size: 16px;
+        }
+        #search-box {
+            margin-bottom: 20px;
+        }
+        #search-query {
+            padding: 10px;
+            font-size: 16px;
+            width: 300px;
+        }
+        button {
+            padding: 10px 20px;
+            font-size: 16px;
+            cursor: pointer;
         }
         .gcse-search {
             margin-top: 20px;
@@ -31,6 +46,12 @@
     </select>
 
     <!-- Search Box -->
+    <div id="search-box">
+        <input type="text" id="search-query" placeholder="Enter your search query">
+        <button onclick="performSearch()">Search</button>
+    </div>
+
+    <!-- Search Results Container -->
     <div class="gcse-search"></div>
 
     <script>
@@ -53,6 +74,27 @@
             script.src = `https://cse.google.com/cse.js?cx=${cx}`;
             script.async = true;
             document.head.appendChild(script);
+        }
+
+        // Function to perform the search
+        function performSearch() {
+            const searchQuery = document.getElementById('search-query').value;
+            const searchEngineId = document.getElementById('search-engine-select').value;
+
+            // Load the selected search engine
+            loadSearchEngine(searchEngineId);
+
+            // Trigger the search (Google PSE script handles this)
+            setTimeout(() => {
+                const searchBox = document.querySelector('.gsc-input input');
+                if (searchBox) {
+                    searchBox.value = searchQuery;
+                    const searchButton = document.querySelector('.gsc-search-button');
+                    if (searchButton) {
+                        searchButton.click();
+                    }
+                }
+            }, 500); // Wait for the Google PSE script to load
         }
 
         // Event listener for dropdown change
