--- a/index.html
+++ b/index.html
@@ -48,7 +48,28 @@
    
   
 
-   
+   <section id="portfolio" class="portfolio">
+    <div class="portfolio-content">
+        <div class="section-heading text-center">
+            <h2>Portfolio</h2>
+        </div>
+        <div class="container">
+            <div class="row portfolio-item">
+                <div class="col-md-6 col-sm-12 portfolio-image">
+                    <h3>Caputok (App)</h3>
+                    <img src="assets/images/caputok-screenshot.png" alt="Caputok App Screenshot">
+                </div>
+                <div class="col-md-6 col-sm-12 portfolio-description">
+                    <p>Caputok is an innovative app designed for saving your time and freedom of following users on TikTok. It is not affiliated with Tiktok or any Thirdparty apps and services. </p>
+                    <ul>
+                        <li><a href="assets/apps/caputok/privacy_policy/">Privacy Policy</a></li>
+                        <li><a href="assets/apps/caputok/terms_of_use/">Terms of Use</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
   
 	  
    
