--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
         </div>
         <div class="container">
             <div class="row portfolio-item">
-                <div class="col-md-6 col-sm-12 portfolio-image">
+               <div class="col-md-6 col-sm-12 portfolio-col portfolio-image">
                     <h3>Caputok (App)</h3>
                     <img src="assets/images/caputok-screenshot.png" alt="Caputok App Screenshot">
                 </div>
-                <div class="col-md-6 col-sm-12 portfolio-description">
+               <div class="col-md-6 col-sm-12 portfolio-col portfolio-description">
                     <p>Caputok is an innovative app designed for saving your time and freedom of following users on TikTok. It is not affiliated with Tiktok or any Thirdparty apps and services. </p>
                     <ul>
                         <li><a href="assets/apps/caputok/privacy_policy/">Privacy Policy</a></li>
@@ -82,7 +82,7 @@
 					</div>
 					<div class="container">
 						<div class="row">
-							<div class="col-md-6">
+							<div class="col-md-6 skills-col">
 								<div class="single-skill-content">
 									<div class="barWrapper">
 										<span class="progressText">construction management</span>
@@ -130,7 +130,7 @@
 									</div><!-- /.barWrapper -->
 								</div>
 							</div>
-							<div class="col-md-6">
+							<div class="col-md-6 skills-col">
 								<div class="single-skill-content">
 									<div class="barWrapper">
 										<span class="progressText">microsoft office</span>
