--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="container">
             <div class="row portfolio-item">
                <div class="col-md-6 col-sm-12 portfolio-col portfolio-image">
-                    <h3>Caputok (App)</h3>
+                    <h3>Caputok (Find all non-followers on TikTok in one place)</h3>
                     <img src="assets/images/caputok-screenshot.png" alt="Caputok App Screenshot">
                 </div>
                <div class="col-md-6 col-sm-12 portfolio-col portfolio-description">
