--- a/index.html
+++ b/index.html
@@ -47,20 +47,19 @@
 		  
    
   
-
-   <section id="portfolio" class="portfolio">
+<section id="portfolio" class="portfolio">
     <div class="portfolio-content">
         <div class="section-heading text-center">
             <h2>Portfolio</h2>
         </div>
         <div class="container">
-            <div class="row portfolio-item">
-               <div class="col-md-6 col-sm-12 portfolio-col portfolio-image">
+            <div class="portfolio-item">
+                <div class="portfolio-col portfolio-image">
                     <h3>Caputok (Find all non-followers on TikTok in one place)</h3>
                     <img src="assets/images/caputok-screenshot.png" alt="Caputok App Screenshot">
                 </div>
-               <div class="col-md-6 col-sm-12 portfolio-col portfolio-description">
-                    <p>Caputok is an innovative app designed for saving your time and freedom of following users on TikTok. It is not affiliated with Tiktok or any Thirdparty apps and services. </p>
+                <div class="portfolio-col portfolio-description">
+                    <p>Caputok is an innovative app designed for saving your time and freedom of following users on TikTok. It is not affiliated with TikTok or any third-party apps and services.</p>
                     <ul>
                         <li><a href="assets/apps/caputok/privacy_policy/">Privacy Policy</a></li>
                         <li><a href="assets/apps/caputok/terms_of_use/">Terms of Use</a></li>
@@ -70,7 +69,7 @@
         </div>
     </div>
 </section>
-  
+
 	  
    
   
@@ -82,7 +81,7 @@
 					</div>
 					<div class="container">
 						<div class="row">
-							<div class="col-md-6 skills-col">
+							<div class="col-md-6 ">
 								<div class="single-skill-content">
 									<div class="barWrapper">
 										<span class="progressText">construction management</span>
@@ -130,7 +129,7 @@
 									</div><!-- /.barWrapper -->
 								</div>
 							</div>
-							<div class="col-md-6 skills-col">
+							<div class="col-md-6 ">
 								<div class="single-skill-content">
 									<div class="barWrapper">
 										<span class="progressText">microsoft office</span>
