--- a/index.html
+++ b/index.html
@@ -59,7 +59,9 @@
                     <img src="assets/images/caputok-screenshot.png" alt="Caputok App Screenshot">
                 </div>
                 <div class="portfolio-col portfolio-description">
-                    <p>Caputok is an innovative app designed for saving your time and freedom of following users on TikTok. It is not affiliated with TikTok or any third-party apps and services.</p>
+                    <p>Caputok is an innovative app designed to save you time and enable you to follow thousands of users on TikTok.
+TikTok is a trademark of ByteDance Ltd. This app is not affiliated with, endorsed by, or associated with TikTok or ByteDance Ltd.
+</p>
                     <ul>
                         <li><a href="assets/apps/caputok/privacy_policy/">Privacy Policy</a></li>
                         <li><a href="assets/apps/caputok/terms_of_use/">Terms of Use</a></li>
