--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class="container">
             <div class="portfolio-item">
                 <div class="portfolio-col portfolio-image">
-                    <p><strong>Caputok</strong>(Find all TikTok non-followers in one place)</p>
+                    <h3>Caputok(Find all TikTok non-followers in one place)</h3>
                     <img src="assets/images/caputok-screenshot.png" alt="Caputok App Screenshot">
                 </div>
                 <div class="portfolio-col portfolio-description">
