--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@ TikTok is a trademark of ByteDance Ltd. This app is not affiliated with, endorse
                     <ul>
                         <li><a href="assets/apps/caputok/privacy_policy/">Privacy Policy</a></li>
                         <li><a href="assets/apps/caputok/terms_of_use/">Terms of Use</a></li>
+			    <li><a href="https://youtube.com/shorts/C1l8K9q8dog?feature=share">User Guide</a></li>
+			    <li><a href="#">App store link (comming soon...)</a></li>
                     </ul>
                 </div>
             </div>
