--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <p>Caputok is an innovative app designed to save you time and enable you to follow thousands of users on TikTok.
 TikTok is a trademark of ByteDance Ltd. This app is not affiliated with, endorsed by, or associated with TikTok or ByteDance Ltd.
 </p>
-                    <ul>
+                    <ul class="portfolio-links">
                         <li><a href="assets/apps/caputok/privacy_policy/">Privacy Policy</a></li>
                         <li><a href="assets/apps/caputok/terms_of_use/">Terms of Use</a></li>
 			    <li><a href="https://youtube.com/shorts/C1l8K9q8dog?feature=share">User Guide</a></li>
