--- a/index.html
+++ b/index.html
@@ -263,6 +263,7 @@ TikTok is a trademark of ByteDance Ltd. This app is not affiliated with, endorse
 </footer>
 
     <script src="scripts.js"></script>
-   
+   <button id="backToTop" class="floating-button">↑</button>
+
 </body>
 </html>
