--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
 </head>
 <body>
     <nav>
-        <div class="nav-left">My Space 😉</div>
+        <div class="nav-left">
+    <a href="#" onclick="window.location.reload();">My Space 😉</a>
+</div>
+
         <div class="nav-right">
             <div class="menu-icon" onclick="toggleMenu()">☰</div>
             <ul id="menu">
