--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <nav>
         <div class="nav-left">
-    <a href="#" onclick="window.location.reload();">My Space 😉</a>
+    <a href="#" onclick="window.location.reload();" class="no-deco">My Space 😉</a>
 </div>
 
         <div class="nav-right">
