--- a/index.html
+++ b/index.html
@@ -215,14 +215,13 @@ TikTok is a trademark of ByteDance Ltd. This app is not affiliated with, endorse
 		 
 	  
 </main>
-     <footer>
+  <footer>
     <div class="footer-container">
-        <!-- Useful Links Column -->
+        <!-- Tools -->
         <div class="footer-column">
-            <h3>Useful Links</h3>
+            <h3>Tools</h3>
             <ul>
-                <li><a href="https://facebook.com" target="_blank" rel="noopener noreferrer">Facebook</a></li>
-                <li><a href="https://x.com" target="_blank" rel="noopener noreferrer">X (Twitter)</a></li>
+                <li><button id="areaCalculatorBtn">Area Calculator</button></li>
             </ul>
         </div>
 
@@ -230,29 +229,19 @@ TikTok is a trademark of ByteDance Ltd. This app is not affiliated with, endorse
         <div class="footer-column">
             <h3>Social Media</h3>
             <ul>
-               <li><a href="https://youtube.com/@sankhatro?si=fwaJiabYnMIfFk3q" target="_blank" rel="noopener noreferrer"><i class="fab fa-youtube"></i>YouTube
-</a></li>
-               <li> <a href="https://x.com/0kisn" target="_blank" rel="noopener noreferrer">
-            <i class="fa-brands fa-x"></i>Krishna's X
-        </a></li>
+                <li><a href="https://youtube.com/@sankhatro?si=fwaJiabYnMIfFk3q" target="_blank" rel="noopener noreferrer"><i class="fab fa-youtube"></i>YouTube</a></li>
+                <li><a href="https://x.com/0kisn" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-x"></i>Krishna's X</a></li>
 
-        <!-- LinkedIn Icon -->
-       <li> <a href="https://www.linkedin.com/in/krishna-niraula-7429b2125/" target="_blank" rel="noopener noreferrer" class="linkedin">
-            <i class="fab fa-linkedin-in"></i>Krishna on LinkedIn 
-        </a></li>
-        
-
-    </ul>
+                <!-- LinkedIn Icon -->
+                <li><a href="https://www.linkedin.com/in/krishna-niraula-7429b2125/" target="_blank" rel="noopener noreferrer" class="linkedin"><i class="fab fa-linkedin-in"></i>Krishna on LinkedIn</a></li>
+            </ul>
         </div>
 
         <!-- About Column -->
         <div class="footer-column">
             <h3>About</h3>
             <ul>
-
-
-    <p>Email: <a id="contact-email" href="mailto:mail@krishnaniraula.com.np">Email Krishna</a></p>
-
+                <p>Email: <a id="contact-email" href="mailto:mail@krishnaniraula.com.np">Email Krishna</a></p>
                 <li><a href="#privacy-policy">Privacy Policy</a></li>
                 <li><a href="#terms-of-use">Terms of Use</a></li>
             </ul>
@@ -261,7 +250,7 @@ TikTok is a trademark of ByteDance Ltd. This app is not affiliated with, endorse
 
     <!-- Copyright Section -->
     <div class="footer-copyright">
-        <p>&copy; 2025 Krishna Niraula. All rights reserved.</p>
+        <p>© 2025 Krishna Niraula. All rights reserved.</p>
     </div>
 </footer>
 
