--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@ TikTok is a trademark of ByteDance Ltd. This app is not affiliated with, endorse
 	  
 </main>
   <footer>
-    <div class="footer-container">
+   <div class="footer-container">
         <!-- Tools -->
         <div class="footer-column">
             <h3>Tools</h3>
@@ -253,6 +253,13 @@ TikTok is a trademark of ByteDance Ltd. This app is not affiliated with, endorse
         <p>© 2025 Krishna Niraula. All rights reserved.</p>
     </div>
 </footer>
+
+	<div id="areaCalculatorPopup" class="popup" style="display:none;">
+    <div class="popup-content">
+        <span class="close">×</span>
+        <iframe id="areaCalculatorIframe" src="assets/area/" style="width:100%; height:400px; border:none;"></iframe>
+    </div>
+</div>
 
     <script src="scripts.js"></script>
    <button id="backToTop" class="floating-button">↑</button>
