--- a/index.html
+++ b/index.html
@@ -222,6 +222,7 @@ TikTok is a trademark of ByteDance Ltd. This app is not affiliated with, endorse
             <h3>Tools</h3>
             <ul>
                 <li><button id="areaCalculatorBtn">Area Calculator</button></li>
+		<li><button id="dateConverterBtn">Date Converter</button></li>
             </ul>
         </div>
 
@@ -253,8 +254,14 @@ TikTok is a trademark of ByteDance Ltd. This app is not affiliated with, endorse
         <p>© 2025 Krishna Niraula. All rights reserved.</p>
     </div>
 </footer>
-
-	<div id="areaCalculatorPopup" class="popup" style="display:none;">
+<div id="dateConverterPopup" class="popup" style="display:none;">
+    <div class="popup-content">
+        <span class="close">×</span>
+        <iframe id="dateConverterIframe" src="about:blank" frameborder="0" scrolling="no" marginwidth="0" marginheight="0" style="border:none; overflow:hidden; width:350px; height:150px;" allowtransparency="true"></iframe>
+    </div>
+</div>
+	
+<div id="areaCalculatorPopup" class="popup" style="display:none;">
     <div class="popup-content">
         <span class="close">×</span>
         <iframe id="areaCalculatorIframe" src="assets/area/" style="width:100%; height:400px; border:none;"></iframe>
