--- a/index.html
+++ b/index.html
@@ -223,6 +223,7 @@ TikTok is a trademark of ByteDance Ltd. This app is not affiliated with, endorse
             <ul>
                 <li><button id="areaCalculatorBtn">Area Calculator</button></li>
 		<li><button id="dateConverterBtn">Date Converter</button></li>
+		<li><button id="nepaliCalendarBtn">Nepali Calendar</button></li>
             </ul>
         </div>
 
@@ -254,6 +255,14 @@ TikTok is a trademark of ByteDance Ltd. This app is not affiliated with, endorse
         <p>© 2025 Krishna Niraula. All rights reserved.</p>
     </div>
 </footer>
+	
+<div id="nepaliCalendarPopup" class="popup" style="display:none;">
+    <div class="popup-content">
+        <span class="close">×</span>
+        <iframe id="nepaliCalendarIframe" src="about:blank" frameborder="0" scrolling="no" marginwidth="0" marginheight="0" style="border:none; overflow:hidden; width:800px; height:840px;" allowtransparency="true"></iframe>
+    </div>
+</div>
+	
 <div id="dateConverterPopup" class="popup" style="display:none;">
     <div class="popup-content">
         <span class="close">×</span>
