--- a/index.html
+++ b/index.html
@@ -222,8 +222,8 @@ TikTok is a trademark of ByteDance Ltd. This app is not affiliated with, endorse
             <h3>Tools</h3>
             <ul>
                 <li><button id="areaCalculatorBtn">Area Calculator</button></li>
-		<li><button id="dateConverterBtn">Date Converter</button></li>
-		<li><button id="nepaliCalendarBtn">Nepali Calendar</button></li>
+		<li><button id="dateConverterBtn">Date Converter (Hamro Patro)</button></li>
+		<li><button id="nepaliCalendarBtn">Nepali Calendar (Hamro Patro)</button></li>
             </ul>
         </div>
 
