--- a/assets/privacypolicy.html
+++ b/assets/privacypolicy.html
@@ -1,30 +1,72 @@
-<h1>Privacy Policy</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Privacy Policy </title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 20px;
+            padding: 0;
+            background-color: #f9f9f9;
+        }
+        h1, h2 {
+            color: #333;
+        }
+        h1 {
+            text-align: center;
+        }
+        section {
+            background: #fff;
+            padding: 15px;
+            border-radius: 8px;
+            margin-bottom: 20px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+    </style>
+</head>
+<body>
+
+   
+
+    <section>
 <p><strong>Effective Date:</strong> Magh 18, 2084 </p>
 <p>This Privacy Policy describes how <a href="https://krishnaniraula.com.np">krishnaniraula.com.np</a> ("Website") handles user data.</p>
+</section>
 
+   <section>  
 <h2>1. No Data Collection</h2>
 <ul>
     <li>This Website does not collect, store, or process any personal user data.</li>
 </ul>
-
+    </section>
+ <section>
 <h2>2. Third-Party Services & Ads</h2>
 <ul>
     <li>The Website displays ads through services such as Google AdSense. These third parties may collect data as per their own privacy policies.</li>
     <li>The Website uses external widgets, such as the Hamropatro date converter, which may have their own data handling policies.</li>
 </ul>
-
+    </section>
+ <section>
 <h2>3. Cookies</h2>
 <ul>
     <li>The Website itself does not use cookies, but third-party advertisers may use cookies to track ad performance.</li>
     <li>Users can manage cookie preferences via their browser settings.</li>
 </ul>
-
+    </section>
+ <section>
 <h2>4. External Links</h2>
 <ul>
     <li>The Website may contain links to third-party websites. Visiting these websites is at the user's own risk, and the Website is not responsible for their content or privacy practices.</li>
 </ul>
-
+</section>
+    <section> 
 <h2>5. Changes to This Policy</h2>
 <p>This Privacy Policy may be updated from time to time. Any changes will be reflected on this page with a revised effective date.</p>
-
+</section>
+    
 <p>For any questions or concerns, please contact <a href="mailto:mail@krishnaniraula.com.np">mail@krishnaniraula.com.np</a>.</p>
+</body>
+</html>
