Update and rename termsofuse.html to tfu.html

--- a/assets/tfu.html
+++ b/assets/tfu.html
@@ -1,33 +1,78 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Terms of Use</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 20px;
+            padding: 0;
+            background-color: #f9f9f9;
+        }
+        h1, h2 {
+            color: #333;
+        }
+        h1 {
+            text-align: center;
+        }
+        section {
+            background: #fff;
+            padding: 15px;
+            border-radius: 8px;
+            margin-bottom: 20px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+    </style>
+</head>
+<body>
+    <section>
 <h2>1. Use of Content</h2>
 <ul>
     <li>The content, including blog posts, scripts, and tools, is provided for informational and personal use only.</li>
     <li>Users are free to use and modify scripts available on the Website, but prior notice is required before reuse or redistribution.</li>
     <li>The Website's content is open-source and publicly available on GitHub, allowing users to fork and contribute.</li>
 </ul>
+</section>
 
+      <section> 
 <h2>2. Advertisements</h2>
 <ul>
     <li>The Website displays advertisements from third-party providers, such as Google AdSense.</li>
     <li>Clicking on ads may redirect users to third-party websites, and the Website is not responsible for external content or transactions.</li>
 </ul>
+</section>
 
+     <section>  
 <h2>3. No User Accounts & Data Collection</h2>
 <ul>
     <li>No user accounts are required to access this Website.</li>
     <li>The Website does not collect, store, or process personal user data for its own use.</li>
 </ul>
+</section>
 
+      <section> 
 <h2>4. Third-Party Services</h2>
 <ul>
     <li>The Website uses third-party tools such as the Hamropatro widget for the date converter.</li>
     <li>The Website is not responsible for any data handling or policies of third-party services.</li>
 </ul>
+</section>
 
+     <section>  
 <h2>5. Limitation of Liability</h2>
 <ul>
     <li>The Website is provided "as is" without any warranties.</li>
     <li>The owner is not liable for any errors, damages, or losses incurred from the use of the Website or its content.</li>
 </ul>
+</section>
 
+     <section>  
 <h2>6. Governing Law</h2>
 <p>These Terms are governed by the laws of Nepal.</p>
+</section>
+    
+</body>
+</html>
