--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@ TikTok is a trademark of ByteDance Ltd. This app is not affiliated with, endorse
         <div class="footer-column">
             <h3>Tools</h3>
             <ul>
-                <li><button id="areaCalculatorBtn">Area Calculator</button></li>
+                <li><button id="areaCalculatorBtn">Land Area Converter</button></li>
 		<li><button id="dateConverterBtn">Date Converter (Hamro Patro)</button></li>
 		<li><button id="nepaliCalendarBtn">Nepali Calendar (Hamro Patro)</button></li>
             </ul>
