--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@ TikTok is a trademark of ByteDance Ltd. This app is not affiliated with, endorse
         <div class="footer-column">
             <h3>Tools</h3>
             <ul>
-                <li><button id="areaCalculatorBtn">Land Area Converter</button></li>
+                <li><button id="areaCalculatorBtn" title="Convert land area units in Nepal">Land Area Converter- Convert Ropani, Aana, Dhur</button></li>
 		<li><button id="dateConverterBtn">Date Converter (Hamro Patro)</button></li>
 		<li><button id="nepaliCalendarBtn">Nepali Calendar (Hamro Patro)</button></li>
             </ul>
@@ -273,7 +273,7 @@ TikTok is a trademark of ByteDance Ltd. This app is not affiliated with, endorse
 <div id="areaCalculatorPopup" class="popup" style="display:none;">
     <div class="popup-content">
         <span class="close">×</span>
-        <iframe id="areaCalculatorIframe" src="assets/area/" style="width:100%; height:400px; border:none;"></iframe>
+        <iframe id="areaCalculatorIframe" src="assets/area/" title="Nepali Land Area Converter - Convert Ropani, Aana, Dhur" style="width:100%; height:400px; border:none;"></iframe>
     </div>
 </div>
 
