--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@ TikTok is a trademark of ByteDance Ltd. This app is not affiliated with, endorse
 <div id="areaCalculatorPopup" class="popup" style="display:none;">
     <div class="popup-content">
         <span class="close">×</span>
-        <iframe id="areaCalculatorIframe" src="assets/area/" title="Nepali Land Area Converter - Convert Ropani, Aana, Dhur" style="width:100%; height:400px; border:none;"></iframe>
+        <iframe id="areaCalculatorIframe" src="land-area-converter/" title="Nepali Land Area Converter - Convert Ropani, Aana, Dhur" style="width:100%; height:400px; border:none;"></iframe>
     </div>
 </div>
 
