--- a/land-area-converter/index.html
+++ b/land-area-converter/index.html
@@ -64,8 +64,8 @@
             "Aana": 213.0014,
             "Paisa": 852.0056,
             "Dam": 3408.0224,
-            "Acre": 1.67,
-            "Hectare": 0.68,
+            "Acre": 1.6735,
+            "Hectare": 0.67726,
             "Square Meter": 6772.630,
             "Square Kilometer": 0.00677263,
             "Square Mile": 0.002614927062,
@@ -74,25 +74,24 @@
         };
 
         const unit_mapping = {
-            "bi": "Bigha",
-            "ka": "Kattha",
-            "dh": "Dhur",
-            "bi-ka-dh": "Bigha",
-            "kh": "Khetmuri",
-            "ma": "Matomuri",
-            "kh-ma": "Khetmuri",
-            "ro": "Ropani",
-            "aa": "Aana",
-            "pa": "Paisa",
-            "da": "Dam",
-            "ro-aa-pa-da": "Ropani",
-            "acre": "Acre",
-            "hectare": "Hectare",
-            "sqm": "Square Meter",
-            "sqkm": "Square Kilometer",
-            "sqmile": "Square Mile",
-            "sqyard": "Square Yard",
-            "sqft": "Square Feet"
+            "bi": "Bigha बिघा",
+            "ka": "Kattha कठ्ठा",
+            "dh": "Dhur धुर",
+            "bi-ka-dh": "Bigha-Kattha-Dhur बि-क-धु",
+            "kh": "Khetmuri खेतमुरी",
+            "ma": "Matomuri माटाेमुरी",
+            "ro": "Ropani राेपनी",
+            "aa": "Aana आना",
+            "pa": "Paisa पैसा",
+            "da": "Dam दाम",
+            "ro-aa-pa-da": "Ropani-Aana-Paisa-Dam राे-आ-प-दा",
+            "acre": "Acre एकड",
+            "hectare": "Hectare हेक्टर",
+            "sqm": "Square Meter वर्ग मिटर",
+            "sqkm": "Square Kilometer वर्ग किलाेमिटर",
+            "sqmile": "Square Mile वर्ग माइल",
+            "sqyard": "Square Yard वर्ग यार्ड",
+            "sqft": "Square Feet वर्ग फिट"
         };
 
         function convert() {
