--- a/land-area-converter/index.html
+++ b/land-area-converter/index.html
@@ -14,8 +14,18 @@
 </head>
 <body>
     <div class="container">
-        <h1>Area Conversion Tool</h1>
+        <h1>Land Area Converter - Convert Ropani, Aana, Dhur</h1>
+<p>Quickly convert land measurement units like Ropani, Aana, and Dhur to Square Meters, Acres, and more.</p>
 
+<h2>How to Use the Land Area Converter?</h2>
+<p>Simply select the unit and enter the area value in the respective field, and the converter will provide accurate results.</p>
+
+<h3>Common Land Measurement Units in Nepal</h3>
+<ul>
+    <li>1 Ropani = 16 Aana</li>
+    <li>1 Aana = 342.25 Sq. Feet</li>
+    <li>1 Bigha = 6,772.63 Sq. Meters</li>
+</ul>
         <!-- Unit Selection -->
         <div class="input-group">
             <label for="unit">Select Unit:</label>
