--- a/land-area-converter/index.html
+++ b/land-area-converter/index.html
@@ -26,6 +26,8 @@
     <li>1 Aana = 342.25 Sq. Feet</li>
     <li>1 Bigha = 6,772.63 Sq. Meters</li>
 </ul>
+        <button onclick="location.href='/land-area-converter/faq.html'" class="faq-button">FAQ</button>
+
         <!-- Unit Selection -->
         <div class="input-group">
             <label for="unit">Select Unit:</label>
@@ -84,24 +86,24 @@
         };
 
         const unit_mapping = {
-            "bi": "Bigha बिघा",
-            "ka": "Kattha कठ्ठा",
-            "dh": "Dhur धुर",
-            "bi-ka-dh": "Bigha-Kattha-Dhur बि-क-धु",
-            "kh": "Khetmuri खेतमुरी",
-            "ma": "Matomuri माटाेमुरी",
-            "ro": "Ropani राेपनी",
-            "aa": "Aana आना",
-            "pa": "Paisa पैसा",
-            "da": "Dam दाम",
-            "ro-aa-pa-da": "Ropani-Aana-Paisa-Dam राे-आ-पै-दा",
-            "acre": "Acre एकड",
-            "hectare": "Hectare हेक्टर",
-            "sqm": "Square Meter वर्ग मिटर",
-            "sqkm": "Square Kilometer वर्ग किलाेमिटर",
-            "sqmile": "Square Mile वर्ग माइल",
-            "sqyard": "Square Yard वर्ग यार्ड",
-            "sqft": "Square Feet वर्ग फिट"
+            "bi": "Bigha",
+            "ka": "Kattha",
+            "dh": "Dhur",
+            "bi-ka-dh": "Bigha",
+            "kh": "Khetmuri",
+            "ma": "Matomuri",
+            "ro": "Ropani",
+            "aa": "Aana",
+            "pa": "Paisa",
+            "da": "Dam",
+            "ro-aa-pa-da": "Ropani",
+            "acre": "Acre",
+            "hectare": "Hectare",
+            "sqm": "Square Meter",
+            "sqkm": "Square Kilometer",
+            "sqmile": "Square Mile",
+            "sqyard": "Square Yard",
+            "sqft": "Square Feet"
         };
 
         function convert() {
